--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <body>
     <div id="main"></div>
-    <script type="module" src="src/main_router.tsx"></script>
+    <script type="module" src="src/main.tsx"></script>
   </body>
 
 </html>
